# ddtp

./: .env_template  LICENSE  Makefile  README.md  pyproject.toml
doc/: planning.md
doc/presentation/: presentation-standalone.html  presentation.html  presentation.md  slides.css
doc/presentation/drawio/: high_level_architecture.drawio  high_level_architecture_kafka.drawio  high_level_architecture_kafka_order_execution.drawio  high_level_architecture_marketdata.drawio  high_level_architecture_order_execution.drawio  high_level_architecture_serialization_communication.drawio  high_level_architecture_storage_and_analysis.drawio  high_level_architecture_strategies.drawio
doc/resources/: component_communication.md  exchange.md  serialization.md  storage.md
doc/submitted/: abstract.md  description.md  title.md
docker/: docker-compose.yml
docker/scripts/: kafka_init.sh
src/ddtp/: __init__.py  buy_on_small_spread_strategy.py  hello.py  marketdata_adapter.py  marketdata_provider.py  order_execution_engine.py  strategy.py
src/ddtp/api/kraken_derivatives/: config.py  data.py  execution_engine_adapter.py  marketdata_adapter.py  order_execution.py  rest.py  websocket.py
src/ddtp/config/: env_vars.py
src/ddtp/marketdata/: data.py  marketdata_adapter.py  orderbook.py
src/ddtp/marketdata/kraken_derivatives/: data.py  websocket.py
src/ddtp/order_entry/: data.py
src/ddtp/order_execution/: data.py  execution_engine_adapter.py  order_manager.py
src/ddtp/serialization/: config.py  consumer.py  producer.py
src/ddtp/strategy/: marketdata.py  order_execution.py
