[project]
name = "ddtp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Geist, Eugen", email = "account@eugengeist.com" }
]
requires-python = ">=3.13.1"
dependencies = [
    "kafka-python>=2.1.2",
    "ormsgpack>=1.8.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "websocket-client>=1.8.0",
]

[project.scripts]
ddtp = "ddtp.hello:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]

[tool.hatch.build.targets.wheel]
      packages = ["src/ddtp"]
